less/widgets.less
/* ... */
.responsiveslideshow .pagination-item {
    width: 100%;
    text-align: center;
    .button {
        width: 8px;
        height: 8px;
        padding: 0;
        text-indent: -9999px;
        overflow: hidden;
        box-shadow: none;
        .border-radius (50px);
        background-color: transparent;
        border: 2px solid @color__slideshow-pagination-item--background;
    }
}

.responsiveslideshow .selected .button {
    background-color: @color__slideshow-pagination-item--background--selected;
}

// Slideshow in Responsive Columns
.responsivecolumns .responsiveslideshow {
    display: inline-block;
    .slides-list,
    .figure,
    .caption {
        height: 400px;
        @media only screen and (max-width: 1600px) {
            height: 400px;
        }
        @media only screen and (max-width: 1400px) {
            height: 400px;
        }
        @media only screen and (max-width: 1100px) {
            height: 400px;
        }
        @media @tablet {
            height: 400px;
        }
        @media only screen and (max-width: 600px) {
            height: 350px;
        }
    }
    .caption {
        .image-title {
            font-size: bkscale(@font-swatch8-font-size, .8);
            line-height: bkscale(@font-swatch8-line-height, .8);
        }
        .image-description {
            font-size: bkscale(@font-swatch9-font-size, .9);
            line-height: bkscale(@font-swatch9-line-height, .9);
        }
    }
    .slide-navigation {
        width: auto;

        .flexbox(flex);
        .flex-wrap(nowrap);
        .justify-content(center);
        .align-items(center);
        .align-content(center);

    }
    .slide-pagination {
        display: none;
    }
}





// -----------------------------
// #Navigation
// -----------------------------

// Widget Overlay
.widget__extendednavigation {
    + .widget-overlay {
        @media @tablet {
            display: none;
        }
    }

    &.open + .widget-overlay {
        @media @tablet {
            z-index: 10400!important;
            display: block;
            margin: 0 auto;

            &:hover {
                background: rgba(0, 147, 135, 0.2);
                border: 1px solid rgb(0, 148, 136);
                box-shadow: rgba(0, 147, 135, 0.2) 0px 0px 0px 3px inset;
            }
        }
    }
}

// Remove margin from ul nav list and widget
.widget[data-widget-type="extendednavigation"] {
    margin-bottom: 0;
}

.navigation-list {
    margin: 0;
    background-color: @color__navigation--background;
    @media only screen and (min-width: 769px) {
        padding: 10px 0;
    }
}

// Navigation alignment
.extendednavigation {
    &.align-left { text-align: left; }
    &.align-right { text-align: right; }
    &.align-center { text-align: center; }
}

.template-homepage .extendednavigation {
    width: 90%;
    margin: 0 5%;
    @media only screen and (min-width: 1300px) {
        width: 1200px;
        margin: 0 auto;
    }
}

// Nav font
.extendednavigation {
    .item-name {
        font-family: @font__navigation--font-family;
        color: @color__navigation--text;
        font-size: @font__navigation--font-size;
        font-weight: @font__navigation--font-weight;
        line-height: @font__navigation--line-height;
        letter-spacing: @font__navigation--letter-spacing;
        &:hover {
            color: @color__navigation--text--hover;
            .transition( all, 0.5s, ease );
        }
        @media @tablet {
            padding: 14px 0;
        }
    }
    .navigation-list--children .item-name {
        @media @tablet {
            padding: 14px;
        }
    }
    @media only screen and (min-width: 769px) {
        .navigation-item:first-child .item-name {
            padding-left: 0;
        }
        .navigation-item:last-child .item-name {
            padding-right: 0;
        }
        .navigation-list--children {
            .navigation-item:first-child .item-name,
            .navigation-item:last-child .item-name,
            .navigation-item {
                padding: 7px 14px;
            }
        }
    }
}

// Dropdown Menu - Folder Item Parent: Gives arrow
.item-name--parent:after {
    content: "";
    display: inline-block;
    vertical-align: middle;
    margin-left: 4px;
    border: 5px solid transparent;
    border-top-color: @color__navigation--text;
}

.item-name--parent:hover:after {
    border-top-color: @color__navigation--text--hover;
}

// Nav item
.navigation-item:first-child {
    @media @tablet {
        border-top: none;
    }
}

.navigation-item:last-child {
    @media @tablet {
        border-bottom: none;
    }
}

.navigation-item.navigation-item--child:first-child {
    @media @tablet {
        border-top: none;
    }
}

// Selected nav item
.navigation-item.selected > .item-name {
    color: @color__navigation--text--selected;
}

// Folder
.navigation-list--children {
    left: inherit;
    right: 0;
    width: auto;
    min-width: 200px;
    white-space: normal;
    border: 1px solid darken(@color__body--background, 7%);
    background-color: @color__navigation--background;
    // Padding for folder list and folder items on desktop
    @media only screen and (min-width: 769px) {
        padding: 7px 0;
        .item-name {
            padding: 7px 14px;
        }
    }
    @media @tablet {
        width: 100%;
    }
}

// Folder in homepage
.template-homepage {
    @media only screen and (min-width: 1024px) {
        .navigation-list--children {
            top: inherit;
            bottom: 100%;
        }
        .item-name:hover:after {
            margin-bottom: 10px;
            -ms-transform: rotate(180deg); /* IE 9 */
            -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
            transform: rotate(180deg);
            .transition( all, 0.5s, ease );
        }
    }
}

// Collapsible navigation
// ----------------------
.navigation-toggle {
    display: none;
}
/* ... */

